Archive/461066a39cd67b8afc3d7a3530b21919-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:3:34: error: cannot dynamic_cast 'f' (of type 'void*') to type 'int*' (target is not pointer or reference to class)
     auto x = dynamic_cast<int*>(f);
                                  ^
